--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -14,44 +14,44 @@
      limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="180dp"
-    android:height="180dp"
-    android:viewportWidth="180"
-    android:viewportHeight="180">
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
     <path
-        android:pathData="M183.63,94.87l0,88.76l-57.49,0l-82.64,-53.43l99,-64.8l41.13,29.47z"
+        android:pathData="M111.16,75.55l0,35.25l-22.83,0l-53.88,-40.35l39.36,-25.71l37.35,30.81z"
         android:fillColor="#1770c7"/>
     <path
-        android:pathData="M43.4,118.8H27.9a1.35,1.35 0,0 1,0 -2.7H43.4a1.35,1.35 0,1 1,0 2.7Z"
+        android:pathData="M34.48,66H28.32a0.54,0.54 0,0 1,0 -1.08h6.16a0.54,0.54 0,0 1,0 1.08Z"
         android:fillColor="#e7f4fd"/>
     <path
-        android:pathData="M22.57,118.8H16.8a1.35,1.35 0,1 1,0 -2.7h5.77a1.35,1.35 0,1 1,0 2.7Z"
+        android:pathData="M26.2,66H23.91a0.54,0.54 0,0 1,0 -1.08H26.2a0.54,0.54 0,1 1,0 1.08Z"
         android:fillColor="#e7f4fd"/>
     <path
-        android:pathData="M143.34,69v54.64a7.47,7.47 0,0 1,-3.8 6.51,7.37 7.37,0 0,1 -3.68,1H47a7.37,7.37 0,0 1,-3.68 -1,7.47 7.47,0 0,1 -3.8,-6.51V69A7.47,7.47 0,0 1,47 61.5h88.84A7.47,7.47 0,0 1,143.34 69Z"
+        android:pathData="M74.17,46.16V67.87a3,3 0,0 1,-1.5 2.58,2.91 2.91,0 0,1 -1.47,0.39H35.92a2.91,2.91 0,0 1,-1.47 -0.39,3 3,0 0,1 -1.51,-2.58V46.16a3,3 0,0 1,0.37 -1.42,3 3,0 0,1 2.61,-1.55H71.2a3,3 0,0 1,3 3Z"
         android:fillColor="#4caef6"/>
     <path
-        android:pathData="M139.54,130.13a7.37,7.37 0,0 1,-3.68 1H47a7.37,7.37 0,0 1,-3.68 -1l20.83,-14.78L91.44,96l27.27,19.35Z"
+        android:pathData="M72.67,70.45a2.91,2.91 0,0 1,-1.47 0.39H35.92a2.91,2.91 0,0 1,-1.47 -0.39l8.28,-5.87L53.56,56.9l10.83,7.68Z"
         android:fillColor="#9bd0fa"/>
     <path
-        android:pathData="M142.43,65.4 L122,82.35 91.44,107.7 60.89,82.35 40.45,65.4A7.46,7.46 0,0 1,47 61.5h88.84A7.46,7.46 0,0 1,142.43 65.4Z"
+        android:pathData="M73.81,44.74l-3.18,2.64 -4.93,4.1 -8.36,6.93 -3.78,3.13L41.42,51.48l-8.11,-6.74a3,3 0,0 1,2.61 -1.55H71.2A3,3 0,0 1,73.81 44.74Z"
         android:fillColor="#e3f2fe"/>
     <path
-        android:pathData="M45.12,87.3c0,0.75 -0.81,1.35 -1.82,1.35H-3.63V86H43.3C44.31,86 45.12,86.55 45.12,87.3Z"
+        android:pathData="M35.16,53.44c0,0.3 -0.32,0.54 -0.72,0.54h-37V52.9h37C34.84,52.91 35.16,53.15 35.16,53.44Z"
         android:fillColor="#e3f2fe"/>
     <path
-        android:pathData="M51.65,97.65H26.1a1.35,1.35 0,0 1,0 -2.7H51.65a1.35,1.35 0,1 1,0 2.7Z"
+        android:pathData="M37.76,57.55H27.61a0.54,0.54 0,1 1,0 -1.07H37.76a0.54,0.54 0,0 1,0 1.07Z"
         android:fillColor="#e7f4fd"/>
     <path
-        android:pathData="M62,106.5a1.55,1.55 0,0 1,-1.7 1.35H-3.63v-2.7H60.25A1.55,1.55 0,0 1,62 106.5Z"
+        android:pathData="M41.85,61.07a0.62,0.62 0,0 1,-0.68 0.53H-2.58V60.53H41.17A0.62,0.62 0,0 1,41.85 61.07Z"
         android:fillColor="#e3f2fe"/>
     <path
-        android:pathData="M117.84,61.5l17.75,9.57l-33.59,27.87l-19.5,-13.74l35.34,-23.7z"
+        android:pathData="M70.63,47.38l-4.93,4.1l-8.36,6.93l-7.38,-5.84l14.07,-9.38l6.6,4.19z"
         android:fillColor="#9bd0fa"/>
     <path
-        android:pathData="M91.44,60.3m-26.4,0a26.4,26.4 0,1 1,52.8 0a26.4,26.4 0,1 1,-52.8 0"
+        android:pathData="M53.56,42.72m-10.49,0a10.49,10.49 0,1 1,20.98 0a10.49,10.49 0,1 1,-20.98 0"
         android:fillColor="#4caef6"/>
     <path
-        android:pathData="M108.05,60a20.53,20.53 0,0 1,-0.29 2.55,15.29 15.29,0 0,1 -0.65,2.48 11.48,11.48 0,0 1,-1.1 2.22,8.07 8.07,0 0,1 -1.58,1.81 7.25,7.25 0,0 1,-2.1 1.21,7.71 7.71,0 0,1 -2.67,0.44 5.28,5.28 0,0 1,-3.17 -0.9,4.86 4.86,0 0,1 -1.75,-2.55 7.79,7.79 0,0 1,-2.53 2.6,5.73 5.73,0 0,1 -2.94,0.85 5.19,5.19 0,0 1,-2.64 -0.65,5.09 5.09,0 0,1 -1.82,-1.81 7.7,7.7 0,0 1,-1 -2.82,14.81 14.81,0 0,1 -0.08,-3.68 18.22,18.22 0,0 1,1.07 -4.88,13.44 13.44,0 0,1 2,-3.7 8.88,8.88 0,0 1,2.69 -2.33,6.25 6.25,0 0,1 3.07,-0.82 9.6,9.6 0,0 1,2 0.17,8.19 8.19,0 0,1 1.54,0.47 8.57,8.57 0,0 1,1.27 0.69l0.5,0.35A1.4,1.4 0,0 1,98.46 53l-1,10.56A8.41,8.41 0,0 0,97.55 66a3.62,3.62 0,0 0,0.61 1.45,1.87 1.87,0 0,0 0.92,0.68 3.13,3.13 0,0 0,1 0.18,3.87 3.87,0 0,0 2.2,-0.65 5.54,5.54 0,0 0,1.63 -1.76,9.76 9.76,0 0,0 1,-2.64 15.73,15.73 0,0 0,0.45 -3.24,25.16 25.16,0 0,0 -0.52,-6.86A13.07,13.07 0,0 0,102.58 48a10.33,10.33 0,0 0,-4.2 -3.23,15.23 15.23,0 0,0 -6.14,-1.12 13.56,13.56 0,0 0,-5.82 1.22A12.84,12.84 0,0 0,82 48.35,16.88 16.88,0 0,0 79,53.68a24.19,24.19 0,0 0,-1.23 6.85,23.11 23.11,0 0,0 0.61,6.89 13.82,13.82 0,0 0,2.46 5.19,11.09 11.09,0 0,0 4.18,3.3 13.91,13.91 0,0 0,5.79 1.14,14.3 14.3,0 0,0 1.84,-0.11 14,14 0,0 0,1.83 -0.33,14.46 14.46,0 0,0 1.69,-0.51l0.22,-0.09a1.26,1.26 0,0 1,1.65 0.79h0a1.25,1.25 0,0 1,-0.69 1.53c-0.2,0.09 -0.41,0.17 -0.63,0.25a15.7,15.7 0,0 1,-1.94 0.58,19.67 19.67,0 0,1 -2.06,0.35c-0.7,0.07 -1.36,0.11 -2,0.11a17.28,17.28 0,0 1,-6.94 -1.32,13.65 13.65,0 0,1 -5.11,-3.81 16.23,16.23 0,0 1,-3.06 -6,25.23 25.23,0 0,1 -0.82,-7.94 25.54,25.54 0,0 1,1.5 -7.79,19.62 19.62,0 0,1 3.57,-6.19A16,16 0,0 1,92.32 41a17,17 0,0 1,7 1.34,13.3 13.3,0 0,1 5,3.82 16.22,16.22 0,0 1,3 6A25.92,25.92 0,0 1,108.05 60ZM87,61.78a8,8 0,0 0,0.54 4.47,2.8 2.8,0 0,0 2.64,1.56 3.11,3.11 0,0 0,1.11 -0.23,4 4,0 0,0 1.13,-0.71 5.9,5.9 0,0 0,1.08 -1.25,9.11 9.11,0 0,0 0.92,-1.85 0.78,0.78 0,0 1,0 -0.19l0.85,-9.24a1.42,1.42 0,0 0,-1 -1.5h0a5.15,5.15 0,0 0,-1.33 -0.17,4.12 4.12,0 0,0 -2.11,0.58A5.44,5.44 0,0 0,89.06 55a10.49,10.49 0,0 0,-1.31 2.85A18.89,18.89 0,0 0,87 61.78Z"
+        android:pathData="M60.16,42.61a9,9 0,0 1,-0.12 1,5.55 5.55,0 0,1 -0.26,1 4.49,4.49 0,0 1,-0.43 0.88,3.36 3.36,0 0,1 -0.63,0.72 2.85,2.85 0,0 1,-1.89 0.65,2.16 2.16,0 0,1 -1.26,-0.35 2,2 0,0 1,-0.7 -1,3.11 3.11,0 0,1 -1,1 2.25,2.25 0,0 1,-1.16 0.33,2 2,0 0,1 -1.05,-0.25 2,2 0,0 1,-0.73 -0.72,3.29 3.29,0 0,1 -0.38,-1.12 6.4,6.4 0,0 1,0 -1.47,7.39 7.39,0 0,1 0.43,-1.93 5.39,5.39 0,0 1,0.8 -1.47A3.62,3.62 0,0 1,52.81 39,2.45 2.45,0 0,1 54,38.64a4.34,4.34 0,0 1,0.78 0.07,3.13 3.13,0 0,1 0.61,0.19 4.11,4.11 0,0 1,0.51 0.27l0.2,0.14a0.57,0.57 0,0 1,0.23 0.51L56,44a3.25,3.25 0,0 0,0 1,1.36 1.36,0 0,0 0.24,0.57 0.67,0.67 0,0 0,0.36 0.27,1.22 1.22,0 0,0 0.41,0.07 1.55,1.55 0,0 0,0.87 -0.25,2.43 2.43,0 0,0 0.65,-0.7 4.18,4.18 0,0 0,0.41 -1.05,6.47 6.47,0 0,0 0.18,-1.29 9.73,9.73 0,0 0,-0.21 -2.72,5.17 5.17,0 0,0 -0.92,-2 4.17,4.17 0,0 0,-1.66 -1.29,6.25 6.25,0 0,0 -2.44,-0.44 5.44,5.44 0,0 0,-2.32 0.48A5.15,5.15 0,0 0,49.79 38a6.66,6.66 0,0 0,-1.16 2.12,9.89 9.89,0 0,0 -0.49,2.72 9.05,9.05 0,0 0,0.24 2.73,5.68 5.68,0 0,0 1,2.07A4.44,4.44 0,0 0,51 48.92a5.55,5.55 0,0 0,2.3 0.45,6.06 6.06,0 0,0 0.73,0c0.25,0 0.49,-0.08 0.73,-0.13a6.56,6.56 0,0 0,0.67 -0.21l0.09,0a0.49,0.49 0,0 1,0.65 0.31h0a0.5,0.5 0,0 1,-0.27 0.61l-0.25,0.1a6.25,6.25 0,0 1,-0.77 0.23,6.85 6.85,0 0,1 -1.61,0.18 6.9,6.9 0,0 1,-2.76 -0.52,5.46 5.46,0 0,1 -2,-1.52A6.34,6.34 0,0 1,47.29 46,9.81 9.81,0 0,1 47,42.81a10.1,10.1 0,0 1,0.6 -3.09A7.63,7.63 0,0 1,49 37.26a6.26,6.26 0,0 1,2.15 -1.63A6.47,6.47 0,0 1,53.91 35a6.66,6.66 0,0 1,2.76 0.54,5.2 5.2,0 0,1 2,1.51 6.53,6.53 0,0 1,1.18 2.39A10.34,10.34 0,0 1,60.16 42.61ZM51.8,43.3A3.13,3.13 0,0 0,52 45.08a1.1,1.1 0,0 0,1 0.62,1.19 1.19,0 0,0 0.44,-0.09 1.58,1.58 0,0 0,0.45 -0.28,2.16 2.16,0 0,0 0.43,-0.5 3.4,3.4 0,0 0,0.37 -0.74,0.15 0.15,0 0,1 0,-0.07l0.33,-3.67a0.56,0.56 0,0 0,-0.4 -0.6h0a2.2,2.2 0,0 0,-0.53 -0.06,1.55 1.55,0 0,0 -0.83,0.23 2.28,2.28 0,0 0,-0.71 0.68,4.4 4.4,0 0,0 -0.52,1.13A7.45,7.45 0,0 0,51.8 43.3Z"
         android:fillColor="#e3f2fe"/>
 </vector>
